refactor: return partial resource the entire resource doesn't need to be returned.
feat: add boilerplate for voice room lobby creation
