# internal/docs/swagger.json
@@ -438,7 +438,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.APIResponse-GuildSettings"
+                            "$ref": "#/definitions/models.APIResponse-array_models_ActivityRole"
                         }
                     },
                     "400": {
@@ -508,6 +508,20 @@
             "properties": {
                 "data": {
                     "$ref": "#/definitions/models.MemberProfile"
+                },
+                "success": {
+                    "type": "boolean"
+                }
+            }
+        },
+        "models.APIResponse-array_models_ActivityRole": {
+            "type": "object",
+            "properties": {
+                "data": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.ActivityRole"
+                    }
                 },
                 "success": {
                     "type": "boolean"
@@ -618,6 +632,12 @@
             "properties": {
                 "chat_activity": {
                     "$ref": "#/definitions/models.ActivityConfig"
+                },
+                "voice_rooms": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.VoiceRoomLobbyConfig"
+                    }
                 }
             }
         },
@@ -671,6 +691,26 @@
             "properties": {
                 "chat_activity": {
                     "$ref": "#/definitions/models.ActivitySettings"
+                }
+            }
+        },
+        "models.VoiceRoomLobbyConfig": {
+            "type": "object",
+            "properties": {
+                "can_adjust_limit": {
+                    "type": "boolean"
+                },
+                "can_lock": {
+                    "type": "boolean"
+                },
+                "can_rename": {
+                    "type": "boolean"
+                },
+                "channel_id": {
+                    "type": "string"
+                },
+                "user_limit": {
+                    "type": "integer"
                 }
             }
         }
